[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/icons/fishy.png" type="Texture" id=1]
[ext_resource path="res://scenes/minigames/DownTheHatch.gd" type="Script" id=2]
[ext_resource path="res://assets/img/backgrounds/background-1.1.png" type="Texture" id=3]
[ext_resource path="res://assets/img/icons/hooky.png" type="Texture" id=4]

[node name="BaseGame" type="Node2D"]
script = ExtResource( 2 )
DEBUG = true
pathThickness = 24

[node name="BGSprite" type="Sprite" parent="."]
position = Vector2( 26, 68 )
texture = ExtResource( 3 )

[node name="FishBody" type="KinematicBody2D" parent="."]
position = Vector2( 3.05176e-05, -3 )
scale = Vector2( 0.2, 0.2 )
z_index = 10

[node name="Camera2D" type="Camera2D" parent="FishBody"]
scale = Vector2( 0.794538, 0.794538 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true

[node name="FishSprite" type="Sprite" parent="FishBody"]
position = Vector2( 0, 10 )
scale = Vector2( 2.77358, 2.91837 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FishBody"]
polygon = PoolVector2Array( 32, -32, 32, 32, -32, 32, -32, -32, 31, -32 )

[node name="HookNode" type="Node2D" parent="FishBody"]

[node name="HookSprite" type="Sprite" parent="FishBody/HookNode"]
position = Vector2( -1.5, 51.7 )
rotation = 3.13994
scale = Vector2( 2.28125, 2.29375 )
texture = ExtResource( 4 )

[node name="PathArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathArea"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

[connection signal="body_exited" from="PathArea" to="." method="_on_PathArea_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
